app/assets/stylesheets/hrwa.css
/* ... */
@media (min-width: 768px) and (max-width: 979px) {
  #outer-container { margin-top:0; }
  #cul_top, #crowndown { -webkit-transform:skewX(0); transform:skewX(0); background:transparent; width:100%; display:none; }
  #navbar_right_wrapper {float:right;}

  .tab-thumbnails a.thumbnail { height:110px; overflow:hidden; }
  .tab-thumbnails a.thumbnail img { max-height:110px; }
}

@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation: portrait) {
  #inner-headline h2 { line-height:14px; font-size:15px; text-shadow:1px 1px 0 black; margin:4px 0;padding:4px; }
}

@media (max-width: 979px) {
  body { padding-top:0; }
  #outer-container { margin-top:0; margin-left:auto; margin-right:auto; }
  #cul_top, #crowndown { -webkit-transform:skewX(0); transform:skewX(0); background:transparent; width:100%; display:none; }
  .navbar #top_q_wrapper { width:100%; margin-bottom:1em; -webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
  #q {width:99%;}
  #top_form_submit_label {display:none;}
  #topbarformdiv { border:0!important; }
  .navbar-fixed-top .navbar-inner.fill { padding:0 10px 0px; margin-left:-10px;margin-right:-10px;}
  #inner-headline-outer  {margin-top:0; padding-top:0.5em; }
  #inner-headline { background:rgba(255,255,255,.3); text-align:center; }
  #inner-headline h1 { line-height:.8em; }
  #inner-headline h2 { line-height:1.0em; }
  #user_util_links {margin-top:2px;margin-bottom:5px; width:auto;width:120px;text-align:left;border:1px solid #AAAAAA;border-width:0px 1px;background-color:#F2F2F0;}
  #user_util_links.in.collapse {border-top:1px solid #AAAAAA;}
  #user_util_links li {border-bottom:1px solid #AAAAAA;width:100%;}
  #user_util_links li:hover, #user_util_links li:active {border-top:0px solid #AAAAAA;}
  #show_utils_btn {line-height:18px; margin-right:2px; padding-left:2px;padding-right:2px;}
}

@media (min-width: 480px) and (max-width: 979px) {
  #inner-headline h1 span.pull-left {float:none;display:inline-block;}
  #inner-headline .subhead { clear:both; display:block;padding-top:5px;padding-bottom:2px;}
}

@media (min-width: 980px) {
}

@media (min-width: 1200px) {
#primary div.pagination { padding-left:10px; }
#inner-headline h1, #inner-headline h1 a {
font-size:56px;
letter-spacing:12px;
}
}

